CI images update

--- a/images/chi-u-nh-a-thai-binh-10/config.ini
+++ b/images/chi-u-nh-a-thai-binh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chi-u-nh-a-thai-binh-10.html
 lastopen = 2024-06-09 22:17:45
 
 [search]
-lastsearch = 2024-07-19 20:32:46
+lastsearch = 2024-07-19 23:52:45
 
 [www.vesselfinder.com]
 match = -91.3%%
@@ -23,13 +23,13 @@ url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8994859/
 
 [thuvienphapluat.vn]
 match = -82.6%%
-title = Chỉ thị 10/CT-UBND 2021 chấn chỉnh tăng cường quản lý ...
-url = https://thuvienphapluat.vn/van-ban/Bat-dong-san/Chi-thi-10-CT-UBND-2021-chan-chinh-tang-cuong-quan-ly-nha-nuoc-ve-dat-dai-tinh-Thai-Binh-483501.aspx
+title = Nghị quyết 04/2022/NQ-HĐND nội dung mức chi tổ chức ...
+url = https://thuvienphapluat.vn/van-ban/Tai-chinh-nha-nuoc/Nghi-quyet-04-2022-NQ-HDND-noi-dung-muc-chi-to-chuc-ky-thi-cuoc-thi-giao-duc-Thai-Binh-513755.aspx
 
 [sotuphap.thaibinh.gov.vn]
-match = 17.4%%
-title = THÔNG BAO DAU GIA TAI SAN Qn 10)
-url = https://sotuphap.thaibinh.gov.vn/upload/80609/20220927/TBNY_so_16_10_Hd13-2022_cua_Ngan_hang_NN_PTNT_Viet_Nam_chi_nhanh_huyen_Tien_Hai_Thai_Binh__lan_10__94ebf.pdf
+match = -65.2%%
+title = SO TU' PHP THAI BINH TRUNG TAM DVDG TA! SAN T!NH ...
+url = https://sotuphap.thaibinh.gov.vn/upload/80609/20221025/TBNY_so_25_Hd22-2022_cua_Phong_Canh_sat_Giao_thong_Cong_an_tinh_Thai_Binh_8e61d.pdf
 
 [www.youtube.com]
 match = 26.1%%
@@ -67,9 +67,9 @@ title = Thái Bình: Phải sớm khắc phục những tồn tại, hạn chế
 url = https://sonoivu.thaibinh.gov.vn/van-ba-n-chi-da-o-die-u-ha-nh/chuyen-doi-so/thai-binh-phai-som-khac-phuc-nhung-ton-tai-han-che-trong-thu.html
 
 [www.facebook.com]
-match = 38.9%%
-title = VIỆC LÀM THÁI BÌNH
-url = https://www.facebook.com/groups/220153782875767/
+match = -60.9%%
+title = Đại học Y Dược Thái Bình - ThaiBinh University of ...
+url = https://www.facebook.com/daihocyduocthaibinh/
 
 [lpbank.com.vn]
 match = -200.0%%
