--- a/images/bo-phu-mau-160x200/config.ini
+++ b/images/bo-phu-mau-160x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-phu-mau-160x200.html
 lastopen = 2024-06-17 03:11:36
 
 [search]
-lastsearch = 2024-07-19 14:47:56
+lastsearch = 2024-07-19 23:48:26
 
 [tiki.vn]
-match = -138.9%%
-title = Bộ Chăn Drap Gối Cao Cấp Phủ Màu Thêu Thắng Lợi - Tiki
-url = https://tiki.vn/bo-chan-drap-goi-cao-cap-phu-mau-theu-thang-loi-xanh-la-160-x-200-cm-p7855499.html
+match = -122.2%%
+title = Mua Bộ Chăn Drap Gối Cao Cấp Phủ Màu Thêu Thắng Lợi
+url = https://tiki.vn/bo-chan-drap-goi-cao-cap-phu-mau-theu-thang-loi-xanh-duong-160-x-200-cm-p7855483.html
 
 [nemxinh.net]
 match = 50.0%%
@@ -32,14 +32,14 @@ title = Giường 160x200 – Chổi Xể - Nội Thất Giá Rẻ Xuất Âu
 url = https://choixe.vn/collections/giuong-160x200
 
 [nemkimtrang.com]
-match = -72.2%%
-title = Bộ Ga (Drap) Nệm Tencel Edena Mẫu 743
-url = https://nemkimtrang.com/bo-ga-drap-nem-tencel-edena-mau-743-chinh-hang-cao-cap
+match = -144.4%%
+title = Bộ Ga (Drap) Nệm Tencel Edena Mẫu 713 - CHÍNH HÃNG ...
+url = https://nemkimtrang.com/bo-ga-drap-nem-tencel-edena-mau-713-chinh-hang-cao-cap
 
 [demxanh.com]
-match = -77.8%%
-title = Bộ ga chun Cotton chống thấm màu xanh ngọc
-url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-xanh-ngoc.html
+match = -66.7%%
+title = Bộ ga chun Cotton chống thấm màu xám đậm
+url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-xam-dam.html
 
 [foreverbedding.net]
 match = -66.7%%
