--- a/images/chieu-cay-dai-loan-vien-da15/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da15.html
 lastopen = 2024-06-09 23:43:35
 
 [search]
-lastsearch = 2024-07-19 21:48:46
+lastsearch = 2024-07-19 23:45:50
 
 [www.diepxuan.com]
 match = 65.4%%
@@ -102,9 +102,9 @@ title = PHIẾU AN TOÀN HÓA CHẤT
 url = https://www.merckmillipore.com/Web-ES-Site/es_ES/-/EUR/ShowDocument-File?ProductSKU=MDA_CHEM-104354&DocumentType=MSD&DocumentId=104354_SDS_VN_VI.PDF&DocumentUID=47184070&Language=VI&Country=VN&Origin=PDP
 
 [www.facebook.com]
-match = 28.6%%
-title = Nội thất nhựa đài loan thành phong
-url = https://www.facebook.com/p/Nội-thất-nhựa-đài-loan-thành-phong-100063972462124/
+match = 25.0%%
+title = Hộ lý đài loan - điều dưỡng đài loan
+url = https://www.facebook.com/holydailoan/?locale=vi_VN
 
 [www.favri.org.vn]
 match = -10.7%%
@@ -230,4 +230,19 @@ url = https://sieuthivitaminnhapkhau.vn/?n=10&id=415&/an-cung-han-quoc-vu-hoang-
 match = -166.7%%
 title = BỘ NỘI VỤ
 url = https://www.mard.gov.vn/PublishingImages/Thongbao/CV-5277-KHCN-11082022.pdf
+
+[shopee.vn]
+match = -17.9%%
+title = chiếu đài loan đại giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=chiếu đài loan đại
+
+[tiki.vn]
+match = 3.6%%
+title = Chiếu trúc đài loan hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=chiếu trúc đài loan
+
+[www.caygiong56.com]
+match = 26.9%%
+title = Xoài đài loan - CAYGIONG56
+url = https://www.caygiong56.com/t.php?posts=117-xoai-dai-loan
 
