--- a/images/chieu-truc-thai-den14/config.ini
+++ b/images/chieu-truc-thai-den14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-thai-den14.html
 lastopen = 2024-06-09 23:36:30
 
 [search]
-lastsearch = 2024-07-19 17:38:56
+lastsearch = 2024-07-19 23:48:14
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -12,9 +12,9 @@ title = Chiếu trúc thai đen14
 url = https://www.diepxuan.com/chieu-truc-thai-den14.html
 
 [demxanh.com]
-match = -28.6%%
-title = [Hot] Bảng giá Chiếu trúc khuyến mãi 2023
-url = https://demxanh.com/bang-gia-chieu-truc-2018.html
+match = -76.2%%
+title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
+url = https://demxanh.com/chieu-truc.html
 
 [www.lazada.vn]
 match = -81.0%%
@@ -27,9 +27,9 @@ title = Chieu truc thai lan hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=chieu truc thai lan
 
 [chieutrelanlan.com]
-match = -14.3%%
-title = Chiếu trúc mắt nhỏ có viền màu đen 140x190cm
-url = https://chieutrelanlan.com/chieu-truc-mat-nho-loai-co-vien-mau-den-140x190cm-34.html
+match = -114.3%%
+title = Chiếu trúc thương hiệu Việt Nam, chất lượng tốt - Bảo hành ...
+url = https://chieutrelanlan.com/
 
 [www.youtube.com]
 match = -119.0%%
@@ -49,7 +49,7 @@ url = https://nhandan.vn/nguoi-dan-phan-khoi-vui-mung-khi-nhan-luong-huu-tro-cap
 [pctravinh.evnspc.vn]
 match = -90.5%%
 title = Trang thông tin điện tử - Công Ty Điện Lực Trà Vinh
-url = https://pctravinh.evnspc.vn/CMS_Article?AID=ARTICLE14030719&MID=F02-MNU202105-00000007
+url = https://pctravinh.evnspc.vn/CMS_Article?AID=ARTICLE14030719&MID=F02-MNU202105-00000041
 
 [baoapbac.vn]
 match = -47.6%%
@@ -252,9 +252,9 @@ title = Bóng đá Việt Nam có trận thắng đậm nhất năm 2024
 url = https://baonamdinh.vn/the-thao/202406/bong-da-viet-nam-co-tran-thang-dam-nhat-nam-2024-2c20d39/
 
 [lsvn.vn]
-match = -119.0%%
-title = Băn khoăn về đề xuất hạn chế tiếp xúc với người chưa ...
-url = https://lsvn.vn/ban-khoan-ve-de-xuat-han-che-tiep-xuc-voi-nguoi-chua-thanh-nien-pham-toi-1719113752.html
+match = -104.8%%
+title = Áp thấp nhiệt đới giật cấp 8, di chuyển hướng Tây Bắc
+url = https://lsvn.vn/ap-thap-nhiet-doi-giat-cap-8-di-chuyen-huong-tay-bac-1721389590.html
 
 [thoibaonganhang.vn]
 match = -61.9%%
@@ -417,9 +417,9 @@ title = SĂN DEAL TANJURO... - Hơi Thở Mặt Trời
 url = https://www.facebook.com/story.php?story_fbid=122155134374126177&id=61553785312238&post_id=61553785312238_122155134374126177
 
 [haiquanonline.com.vn]
-match = -119.0%%
-title = Hải Phòng: Thu ngân sách đạt 60.800 tỷ đồng, tăng trên 34%%
-url = https://haiquanonline.com.vn/hai-phong-thu-ngan-sach-dat-60800-ty-dong-tang-tren-34-188035.html
+match = -109.5%%
+title = Doanh nghiệp kỳ vọng gia tăng xuất khẩu qua các kênh ...
+url = https://haiquanonline.com.vn/doanh-nghiep-ky-vong-gia-tang-xuat-khau-qua-cac-kenh-phan-phoi-quoc-te-188119.html
 
 [baovinhphuc.com.vn]
 match = -104.8%%
@@ -437,9 +437,9 @@ title = Lương hưu mới được chi trả tới hơn 60%% người hưởng
 url = https://cafef.vn/luong-huu-moi-duoc-chi-tra-toi-hon-60-nguoi-huong-188240702055151499.chn
 
 [baobinhphuoc.com.vn]
-match = 9.5%%
-title = Binh đoàn 16 thông báo
-url = https://baobinhphuoc.com.vn/news/249/160213/binh-doan-16-thong-bao
+match = -133.3%%
+title = Microsoft nói gì khi dịch vụ đám mây của hãng bị lỗi trên ...
+url = https://baobinhphuoc.com.vn/news/80/160282/microsoft-noi-gi-khi-dich-vu-dam-may-cua-hang-bi-loi-tren-pham-vi-toan-cau
 
 [baoyenbai.com.vn]
 match = -114.3%%
