--- a/images/vo-chan-ks-uc-20-22/config.ini
+++ b/images/vo-chan-ks-uc-20-22/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-20-22.html
 lastopen = 2024-06-09 22:13:27
 
 [search]
-lastsearch = 2024-07-19 21:47:40
+lastsearch = 2024-07-19 23:50:47
 
 [profiles.icts.uci.edu]
 match = -7.1%%
@@ -42,8 +42,8 @@ title = Gary Vilke - UCSD Profiles
 url = https://profiles.ucsd.edu/gary.vilke
 
 [medboard.nv.gov]
-match = -121.1%%
-title = Disciplinary Actions - Board of Medical Examiners
+match = -100.0%%
+title = Disciplinary Actions - Medical Examiners Board
 url = https://medboard.nv.gov/Patients/Disciplinary/DisciplinaryActions/
 
 [www.techcosmos.com.hk]
@@ -54,7 +54,7 @@ url = https://www.techcosmos.com.hk/thomas/publications/
 [www2.ed.gov]
 match = -126.3%%
 title = Candidates for the US Presidential Scholars Program
-url = https://www2.ed.gov/programs/psp/2023/candidates.pdf
+url = https://www2.ed.gov/programs/psp/2024/candidates.pdf
 
 [www.ajnr.org]
 match = 21.1%%
