CI images update

--- a/images/tui-warmdream-160x200x09/config.ini
+++ b/images/tui-warmdream-160x200x09/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-160x200x09.html
 lastopen = 2024-06-17 10:41:37
 
 [search]
-lastsearch = 2024-07-19 23:17:33
+lastsearch = 2024-07-20 00:21:26
 
 [www.diepxuan.com]
 match = 10.5%%
@@ -69,7 +69,7 @@ url = https://www.wanderthewest.com/threads/new-thermal-pack-quilted-with-lower-
 [www.amazon.com]
 match = -50.0%%
 title = Amazon.com: Customer Questions & Answers
-url = https://www.amazon.com/ask/questions/Tx1A2ZU0C5ULQJ7/?
+url = https://www.amazon.com/ask/questions/asin/B0002YTLS6
 
 [ultralightandcomfortable.com]
 match = 0.0%%
@@ -80,4 +80,9 @@ url = https://ultralightandcomfortable.com/tag/ultralight-sleeping-bag/
 match = -83.3%%
 title = Vinyl Asylum
 url = https://www.audioasylum.com/cgi/vt.mpl?f=vinyl&m=1096095&VT=T
+
+[rv-dreams.activeboard.com]
+match = -33.3%%
+title = Doesn't Anyone Want Our Elite Suites?
+url = https://rv-dreams.activeboard.com/mobile.spark?p=topic&topic=34863352
 
