--- a/images/vo-goi-ke-mau/config.ini
+++ b/images/vo-goi-ke-mau/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-ke-mau.html
 lastopen = 2024-06-10 01:36:08
 
 [search]
-lastsearch = 2024-07-19 23:16:36
+lastsearch = 2024-07-20 00:15:55
 
 [ninhouse.vn]
 match = -146.2%%
@@ -37,9 +37,9 @@ title = Cách làm sạch vỏ gối bị ố vàng hiệu quả, nhanh chóng t
 url = https://goni.vn/cach-lam-sach-vo-goi-bi-o-vang-hieu-qua-nhanh-chong-tai-nha/
 
 [edena.vn]
-match = -61.5%%
-title = Vỏ Gối Ôm Modal Nhiều Màu - Edena
-url = https://edena.vn/products/vo-goi-om-modal-nhieu-mau
+match = -115.4%%
+title = Vỏ Gối Cotton Đặc Biệt Nhiều Màu - Edena
+url = https://edena.vn/products/vo-goi-cotton-dac-biet-nhieu-mau
 
 [shopykhoa.com]
 match = -200.0%%
