--- a/images/nem-caosu-lien-a-180x200x10-classic/config.ini
+++ b/images/nem-caosu-lien-a-180x200x10-classic/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-caosu-lien-a-180x200x10-classic.html
 lastopen = 2024-07-02 13:17:37
 
 [search]
-lastsearch = 2024-07-19 23:53:07
+lastsearch = 2024-07-20 00:16:28
 
 [nemgiakho.com]
 match = 11.4%%
@@ -75,4 +75,9 @@ url = https://thegioinem.com/bang-gia-nem-cao-su-lien-a.html
 match = 51.4%%
 title = Đệm cao su Liên Á Classic 180x200x10cm
 url = https://shopee.vn/Đệm-cao-su-Liên-Á-Classic-180x200x10cm-CHÍNH-HÃNG-BẢO-HÀNH-10-NĂM-i.37605375.9166502745
+
+[www.diepxuan.com]
+match = 45.7%%
+title = Nệm caosu Liên Á Classic 180x200x10 - Điệp Xuân
+url = https://www.diepxuan.com/nem-caosu-lien-a-classic-180x200x10.html
 
