--- a/images/nem-foam-dreamland-uc-160x200x20/config.ini
+++ b/images/nem-foam-dreamland-uc-160x200x20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-foam-dreamland-uc-160x200x20.html
 lastopen = 2024-06-07 00:23:34
 
 [search]
-lastsearch = 2024-07-19 11:19:16
+lastsearch = 2024-07-20 00:14:37
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -22,9 +22,9 @@ title = Đệm Memory Foam Massage Kawaii Dreamland
 url = https://shopee.vn/Đệm-Memory-Foam-Massage-Kawaii-Dreamland-Nệm-Công-Thái-Học-Công-Nghệ-Japan-i.1090783225.24251489307
 
 [demxanh.com]
-match = -6.2%%
-title = Đệm bông ép Dreamland giá rẻ, chính hãng tại Hà Nội
-url = https://demxanh.com/dem-bong-ep-dreamland.html
+match = 6.2%%
+title = Đệm bông ép Dreamland chống thoái hóa cột sống
+url = https://demxanh.com/dem-bong-ep-dreamland-chong-thoai-hoa-cot-song.html
 
 [www.youtube.com]
 match = -40.6%%
@@ -37,7 +37,7 @@ title = Customer reviews: Arctic Dreams 10& ...
 url = https://www.amazon.com/Dreamfoam-Bedding-10-Inch-Cooling-Mattress/product-reviews/B013L4ZWWW
 
 [forum.mattressunderground.com]
-match = -28.1%%
-title = dreamfoam 13" gel?? - General Mattresses Questions
-url = https://forum.mattressunderground.com/t/dreamfoam-13-gel/6456
+match = -37.5%%
+title = Pulled the trigger today and purchased the Dreamfoam ...
+url = https://forum.mattressunderground.com/t/pulled-the-trigger-today-and-purchased-the-dreamfoam-ultimate-dreams-13inch-gel-memory-foam/6902
 
