--- a/images/ruot-nem-korea-120x190x09/config.ini
+++ b/images/ruot-nem-korea-120x190x09/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-120x190x09.html
 lastopen = 2024-06-10 11:55:00
 
 [search]
-lastsearch = 2024-07-19 23:34:26
+lastsearch = 2024-07-20 00:17:41
 
 [www.diepxuan.com]
 match = -12.0%%
@@ -17,8 +17,8 @@ title =
 url = https://www.riotgames.com/en/news/korea-cultural-heritage-protection-project
 
 [www.linkedin.com]
-match = -56.0%%
-title = How to get a job in Korea as a non-Korean (again)
+match = 0.0%%
+title = 
 url = https://www.linkedin.com/pulse/how-get-job-korea-non-korean-again-ross-harman
 
 [www.youtube.com]
