--- a/images/ruot-nem-korea-180x200x09/config.ini
+++ b/images/ruot-nem-korea-180x200x09/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-180x200x09.html
 lastopen = 2024-06-11 23:29:58
 
 [search]
-lastsearch = 2024-07-19 18:30:20
+lastsearch = 2024-07-20 00:18:32
 
 [www.diepxuan.com]
 match = -12.0%%
@@ -17,8 +17,8 @@ title = Seoul, Korea - Riot Games Global Offices & Job Openings
 url = https://www.riotgames.com/en/work-with-us/offices/seoul
 
 [www.linkedin.com]
-match = -56.0%%
-title = How to get a job in Korea as a non-Korean (again)
+match = 0.0%%
+title = 
 url = https://www.linkedin.com/pulse/how-get-job-korea-non-korean-again-ross-harman
 
 [www.youtube.com]
