CI images update

--- a/images/ruot-nem-korea-9f-16-20/config.ini
+++ b/images/ruot-nem-korea-9f-16-20/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-16-20.html
 lastopen = 2024-06-10 00:40:18
 
 [search]
-lastsearch = 2024-07-19 21:20:29
+lastsearch = 2024-07-20 00:37:28
 
 [www.reddit.com]
-match = 4.3%%
-title = Nemesis hits rank 2 Korea - 1726 lp
+match = -82.6%%
+title = Nemesis hits rank 2 Korea - 1726 lp : r/leagueoflegends
 url = https://www.reddit.com/r/leagueoflegends/comments/17odwx2/nemesis_hits_rank_2_korea_1726_lp/
 
 [en.wikipedia.org]
-match = -13.0%%
-title = List of TCP and UDP port numbers
-url = https://en.wikipedia.org/wiki/List_of_TCP_and_UDP_port_numbers
+match = -58.3%%
+title = Nam Joo-hyuk
+url = https://en.wikipedia.org/wiki/Nam_Joo-hyuk
 
 [liquipedia.net]
 match = 0.0%%
@@ -332,9 +332,9 @@ title = July-August 2024 (Volume 76, Number 3)
 url = https://monthlyreview.org/2024/07/01/mr-076-03-2024-07_0/
 
 [synapse.koreamed.org]
-match = -2100.0%%
-title = 2
-url = https://synapse.koreamed.org/articles/1096353
+match = -25.0%%
+title = Original Article
+url = https://synapse.koreamed.org/articles/1119644
 
 [www.svcleanenergy.org]
 match = 0.0%%
@@ -465,4 +465,9 @@ url = https://leg.wa.gov/CodeReviser/documents/sessionlaw/1973pam1.pdf
 match = -100.0%%
 title = U.S. Marines in Vietnam High Mobility and Standown 1969 ...
 url = https://www.usmcu.edu/Portals/218/U_S_ Marines in Vietnam High Mobility and Standown 1969  PCN 19000310300.pdf
+
+[www.rferl.org]
+match = -108.7%%
+title = Tajik President's Demand For 'Respect' From Putin Viewed ...
+url = https://www.rferl.org/a/tajikistan-russia-rahmon-youtube-respect/32084773.html
 
