--- a/images/tham-giuong-ii-180x200/config.ini
+++ b/images/tham-giuong-ii-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-ii-180x200.html
 lastopen = 2024-06-17 21:09:53
 
 [search]
-lastsearch = 2024-07-19 22:29:58
+lastsearch = 2024-07-20 00:36:58
 
 [www.diepxuan.com]
 match = 40.9%%
@@ -12,9 +12,9 @@ title = Thảm giường nỉ 180x200 - Điệp Xuân
 url = https://www.diepxuan.com/tham-giuong-ni-180x200.html
 
 [demxanh.com]
-match = 0.0%%
-title = Thảm trải giường cao su non màu ghi
-url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-ghi.html
+match = -22.7%%
+title = Thảm trải giường lông cừu TLC 06 - Hà Nội
+url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-06.html
 
 [www.lazada.vn]
 match = -68.2%%
@@ -62,9 +62,9 @@ title = Cách Tính Diện Tích, Kích Thước Các Loại ... - Ru9
 url = https://ru9.vn/blogs/magazine/cach-tinh-dien-tich-kich-thuoc-cac-loai-giuong-ngu
 
 [jysk.vn]
-match = -54.5%%
-title = Bed frame VEDDE 180x200 wild oak - JYSK.vn
-url = https://jysk.vn/en-US/bed-frame-vedde-180x200-wild-oak
+match = -68.2%%
+title = Mattress 180x200 GOLD S95 DREAMZONE - JYSK
+url = https://jysk.vn/en-US/spring-mattress-dreamzone-s95-r180xd200xc28cm
 
 [decosy.com]
 match = -166.7%%
@@ -82,9 +82,9 @@ title = Giường bọc nệm hoàng gia GK01
 url = https://nemgiakho.com/giuong-boc-nem-hoang-gia-gk01.html
 
 [dovihome.vn]
-match = -77.3%%
-title = Giường ngủ Decor có tựa đầu phong cách tối giản
-url = https://dovihome.vn/giuong-ma-dv4-giuong-ngu-decor-co-tua-dau-phong-cach-toi-gian
+match = -86.4%%
+title = Giường ngủ Decor kết hợp mây mắt cáo từ gỗ ...
+url = https://dovihome.vn/giuong-ma-dv6-giuong-ngu-decor-ket-hop-may-mat-cao-tu-go-thong-nhap-khau
 
 [decoviet.vn]
 match = 22.2%%
