--- a/images/chan-3-kg/config.ini
+++ b/images/chan-3-kg/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-3-kg.html
 lastopen = 2024-06-09 21:50:05
 
 [search]
-lastsearch = 2024-07-19 18:16:32
+lastsearch = 2024-07-20 00:36:26
 
 [silverwow.net]
 match = -255.6%%
@@ -172,9 +172,9 @@ title = Chains & Ropes
 url = https://www.homedepot.com/b/Hardware-Chains-Ropes-Chain/N-5yc1vZc2a3
 
 [www.kuerbisollisshop.de]
-match = -288.9%%
-title = 2212 Chan 2023 (1003,3kg) [22122023] - 55,20
-url = https://www.kuerbisollisshop.de/index.php?main_page=product_info&cPath=1_82_86&products_id=2676&language=en
+match = -366.7%%
+title = 2212 Chan 2023 (1003,3kg) - Kürbisollis Online Shop
+url = https://www.kuerbisollisshop.de/index.php?main_page=product_info&cPath=1_82_85&products_id=2676&language=en
 
 [market.borong.com]
 match = -155.6%%
