--- a/images/nem-caosu-dreamland-uc-160x200x10-xuat-khau/config.ini
+++ b/images/nem-caosu-dreamland-uc-160x200x10-xuat-khau/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/nem-caosu-dreamland-uc-160x200x10-xuat-khau.html
 lastopen = 2024-06-07 00:26:46
 
 [search]
-lastsearch = 2024-07-19 13:44:32
+lastsearch = 2024-07-20 00:39:08
 
 [demdreamland.vn]
-match = 25.6%%
-title = Đệm cao su nhập khẩu Dreamland Natural Latex
-url = https://demdreamland.vn/dem-cao-su-nhap-khau-dreamland-natural-latex/
+match = 27.9%%
+title = Lưu trữ ĐỆM CAO SU DREAMLAND - demdreamland
+url = https://demdreamland.vn/dem-cao-su-dreamland/
 
 [demxanh.com]
-match = 18.6%%
-title = Đệm cao su Kim Cương xuất khẩu PRINCESS GOLD áo gấm
-url = https://demxanh.com/dem-cao-su-kim-cuong-xuat-khau-princess-gold.html
+match = 16.3%%
+title = Đệm cao su Kim Cương xuất khẩu PRINCESS MASSAGE ...
+url = https://demxanh.com/dem-cao-su-kim-cuong-xuat-khau-princess-massage.html
 
 [www.diepxuan.com]
 match = -277.8%%
@@ -22,9 +22,9 @@ title = DreamLand
 url = https://www.diepxuan.com/dreamland.html?p=4
 
 [dreamland.vn]
-match = -11.1%%
-title = Đệm cao su Xuất Khẩu - 10cm
-url = http://dreamland.vn/Dem-cao-su-Xuat-Khau---10cm-i4418.html
+match = 20.5%%
+title = Đệm cao su Thiên Nhiên Hoàng Gia - 16cm
+url = http://dreamland.vn/Dem-cao-su-Thien-Nhien-Hoang-Gia---16cm-i4417.html
 
 [demviethome.vn]
 match = 7.0%%
