--- a/images/nem-sieu-nhe-9f-12/config.ini
+++ b/images/nem-sieu-nhe-9f-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-12.html
 lastopen = 2024-06-10 01:22:00
 
 [search]
-lastsearch = 2024-07-19 23:39:58
+lastsearch = 2024-07-20 00:34:23
 
 [www.lazada.vn]
 match = -88.9%%
@@ -17,19 +17,19 @@ title = NEM-12
 url = https://www.coastpneumatics.com/product/NEM-12/
 
 [m.facebook.com]
-match = -16.7%%
-title = NEM CUA BỂ VUÔNG SIÊU CHẤT LƯỢNG
-url = https://m.facebook.com/groups/213134222458659/posts/1913588515746546/
+match = -177.8%%
+title = Thấy thương chị gái bán nem nướng thật thà hỏi gì cũng khai
+url = https://m.facebook.com/amthucduongpho247/videos/thấy-thương-chị-gái-bán-nem-nướng-thật-thà-hỏi-gì-cũng-khai-atdp/629711951714693/
 
 [thegioinem.com]
-match = 17.6%%
-title = Bảng Giá Nệm 2024
-url = https://thegioinem.com/bang-gia-nem
+match = -105.6%%
+title = Bảng giá nệm Vạn Thành khuyến mãi mới nhất 2024
+url = https://thegioinem.com/bang-gia-nem-van-thanh-moi.html
 
 [www.facebook.com]
-match = -27.8%%
-title = Siêu Thị Nệm | Ho Chi Minh City
-url = https://www.facebook.com/sieuthinem/
+match = -18.2%%
+title = NEM Fashion
+url = https://www.facebook.com/nemfashion.official/
 
 [eva.vn]
 match = -150.0%%
