--- a/images/tui-korea-14/config.ini
+++ b/images/tui-korea-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-korea-14.html
 lastopen = 2024-06-17 10:35:06
 
 [search]
-lastsearch = 2024-07-19 23:36:43
+lastsearch = 2024-07-20 00:33:09
 
 [www.tui.co.uk]
-match = 0.0%%
-title = 
-url = https://www.tui.co.uk/holidays/tui-blue
+match = -33.3%%
+title = Holiday Types 2024/25
+url = https://www.tui.co.uk/holidays
 
 [uk.trip.com]
 match = 0.0%%
