CI images update

--- a/images/chieu-truc-thai-den15/config.ini
+++ b/images/chieu-truc-thai-den15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-thai-den15.html
 lastopen = 2024-06-07 00:18:02
 
 [search]
-lastsearch = 2024-07-20 00:19:24
+lastsearch = 2024-07-20 00:46:21
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -257,9 +257,9 @@ title = Tuyển dụng Content - Marketing | 🌿🌿 TUYỂN NHÂN VIÊN ...
 url = https://m.facebook.com/groups/273258083431107/posts/1661053907984844/
 
 [tuoitre.vn]
-match = -138.1%%
-title = Giấu ngà voi trong lô hàng nhập sừng bò châu Phi, lãnh án ...
-url = https://tuoitre.vn/giau-nga-voi-trong-lo-hang-nhap-sung-bo-chau-phi-lanh-an-10-nam-tu-20240718173119129.htm
+match = -119.0%%
+title = Tin tức giải trí 19-7: Michael Learns To Rock đến Việt Nam
+url = https://tuoitre.vn/tin-tuc-giai-tri-19-7-michael-learns-to-rock-den-viet-nam-lam-truong-quay-mv-o-chau-au-20240719135846723.htm
 
 [www.fvhospital.com]
 match = -104.8%%
@@ -400,4 +400,14 @@ url = https://toquoc.vn/gioi-tre-ran-ran-ru-nhau-boc-nhan-chai-do-uong-th-vua-sa
 match = -128.6%%
 title = Chia sẻ kết quả triển khai các giải pháp phát triển mô hình ...
 url = https://nghean.gov.vn/tin-noi-bat/chia-se-ket-qua-trien-khai-cac-giai-phap-phat-trien-mo-hinh-phong-chong-duoi-nuoc-tre-em-667018
+
+[www.tayninh.gov.vn]
+match = -133.3%%
+title = Đường tuần tra biên giới tỉnh Tây Ninh góp phần giữ vững ...
+url = https://www.tayninh.gov.vn/vi/news/dua-nghi/duong-tuan-tra-bien-gioi-tinh-tay-ninh-gop-phan-giu-vung-an-ninh-trat-tu-phat-trien-kinh-te-xa-hoi-vung-bien-47741.html
+
+[baothaibinh.com.vn]
+match = -90.5%%
+title = Việt Nam xuất siêu 11,88 tỷ USD - Báo Thái Bình điện tử
+url = https://baothaibinh.com.vn/tin-tuc/5/204037/viet-nam-xuat-sieu-11-88-ty-usd
 
