--- a/images/nem-sieu-nhe-9f-18/config.ini
+++ b/images/nem-sieu-nhe-9f-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-18.html
 lastopen = 2024-06-09 23:55:48
 
 [search]
-lastsearch = 2024-07-20 00:21:04
+lastsearch = 2024-07-20 00:46:09
 
 [m.youtube.com]
 match = -144.4%%
@@ -17,9 +17,9 @@ title = Bảng giá nệm Vạn Thành khuyến mãi mới nhất 2024
 url = https://thegioinem.com/bang-gia-nem-van-thanh-moi.html
 
 [www.instagram.com]
-match = -144.4%%
-title = Thùy Ngân (@huuloc861) • Instagram photos and videos
-url = https://www.instagram.com/huuloc861/
+match = -66.7%%
+title = 𝐍𝐞𝐦 𝐜𝐡𝐚̉ 𝐜𝐚́𝐜 𝐥𝐨𝐚̣𝐢 đ𝐚𝐧𝐠 𝐜𝐨́ 𝐫𝐚̂́𝐭 𝐧𝐡𝐢𝐞̂̀𝐮 𝐨̛̉ ...
+url = https://www.instagram.com/p/C8pRwdDgBbw/
 
 [www.facebook.com]
 match = -44.4%%
@@ -27,9 +27,9 @@ title = NEM Fashion uppfærði opnumynd sína.
 url = https://www.facebook.com/photo.php?fbid=801742548655111&set=a.651941763635191&type=3&locale=is_IS
 
 [www.tiktok.com]
-match = -11.1%%
-title = Feu D'artific Tampon 2024
-url = https://www.tiktok.com/discover/feu-d’artific-tampon-2024
+match = -127.8%%
+title = Nem Nướng Siêu To Khổng Lồ Siêu Ngon #ancungtiktok ...
+url = https://www.tiktok.com/@thenguyen_kitchen/video/7139504048713010458
 
 [www.youtube.com]
 match = -155.6%%
@@ -72,9 +72,9 @@ title = U.S. DEPARTMENT OF COMMERCE National Technical ...
 url = https://www.ojp.gov/pdffiles1/Photocopy/93776NCJRS.pdf
 
 [m.facebook.com]
-match = -16.7%%
-title = NEM CUA BỂ VUÔNG SIÊU CHẤT LƯỢNG
-url = https://m.facebook.com/groups/213134222458659/posts/1913588515746546/
+match = -61.1%%
+title = Ăn vặt ngon Cali | 💥NEM NƯỚNG NHA TRANG
+url = https://m.facebook.com/groups/anvatngoncali/posts/8385390094807264/
 
 [www.proz.com]
 match = -183.3%%
