--- a/images/tham-chan-len-xu-1-50x80/config.ini
+++ b/images/tham-chan-len-xu-1-50x80/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-chan-len-xu-1-50x80.html
 lastopen = 2024-06-07 00:36:50
 
 [search]
-lastsearch = 2024-07-19 21:48:35
+lastsearch = 2024-07-20 00:48:31
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -12,14 +12,14 @@ title = Thảm chân len xù 1 50x80
 url = https://www.diepxuan.com/tham-chan-len-xu-1-50x80.html
 
 [tiki.vn]
-match = -58.3%%
-title = Thảm lau chân kích thước 50x80 hàng chính hãng, giao ...
-url = https://tiki.vn/search?q=thảm lau chân kích thước 50x80
+match = -41.7%%
+title = Tham chui chan 60x80 hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=tham chui chan 60x80
 
 [shopee.vn]
-match = -12.5%%
-title = thảm lau chân chống trơn trượt kích thước 50x80
-url = https://shopee.vn/Thảm-lau-chân-siêu-thấm-hút-nước-5s-thảm-lau-chân-chống-trơn-trượt-kích-thước-50x80-i.351179465.22661027123
+match = -8.3%%
+title = THẢM CHÙI CHÂN NỈ CỠ LỚN KT 1,2m*1,8m, ...
+url = https://shopee.vn/THẢM-CHÙI-CHÂN-NỈ-CỠ-LỚN-KT-1-2m*1-8m-THẢM-CHÙI-CHÂN-SỢI-LEN-ĐẾ-CAO-SU-Thảm-Chùi-Chân-Khách-Sạn-i.78933986.2706980272
 
 [lepetit.com.vn]
 match = -79.2%%
