CI images update

--- a/images/chieu-cay-cao-bang-lua-18/config.ini
+++ b/images/chieu-cay-cao-bang-lua-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-lua-18.html
 lastopen = 2024-06-09 22:41:28
 
 [search]
-lastsearch = 2024-07-20 00:33:49
+lastsearch = 2024-07-20 01:16:22
 
 [chieutruc.info]
 match = -60.0%%
@@ -13,8 +13,8 @@ url = https://chieutruc.info/chieu-truc-cao-bang-cao-son/
 
 [demxanh.com]
 match = -28.0%%
-title = Bảng giá chiếu trúc Cao Bằng Tây Bắc mới nhất 2021
-url = https://demxanh.com/bang-gia-chieu-truc-cao-bang-tay-bac-moi-nhat-2019.html
+title = Bảng giá chiếu trúc Cao Bằng Cao Sơn mới nhất 2024
+url = https://demxanh.com/bang-gia-chieu-truc-cao-bang-cao-son-moi-nhat-2019.html
 
 [shopee.vn]
 match = -64.0%%
@@ -47,9 +47,9 @@ title = Chiếu Trúc Cao Sơn Cao Bằng | Cao Bang
 url = https://www.facebook.com/chieutruccaobangcbg/
 
 [caobangtv.vn]
-match = 20.0%%
-title = Truyền hình Cao Bằng
-url = http://caobangtv.vn/
+match = -76.0%%
+title = Tổng Bí thư Nguyễn Phú Trọng - Nhà lãnh đạo được nhân ...
+url = http://caobangtv.vn/tin-tuc-n75190/tong-bi-thu-nguyen-phu-trong--nha-lanh-dao-duoc-nhan-dan-yeu-men.html
 
 [tienphong.vn]
 match = -60.0%%
@@ -170,4 +170,9 @@ url = https://chieutruccaobang.com/
 match = -36.0%%
 title = Chiếu Tre Trúc Tăm Vân Gỗ Tây Bắc Cao Bằng Mát Lạnh ...
 url = https://h5.lazada.vn/products/chieu-tre-truc-tam-van-go-tay-bac-cao-bang-mat-lanh-mat-sau-lot-lua-cao-cap-gap-doi-duoc-cho-mua-he-mat-ruoi-du-kich-thuoc-du-size-i1908079923.html
+
+[sotttt.caobang.gov.vn]
+match = -28.0%%
+title = Sở Thông tin và Truyền thông tỉnh Cao Bằng
+url = https://sotttt.caobang.gov.vn/
 
