--- a/images/chieu-gap-dai-loan-lua-12/config.ini
+++ b/images/chieu-gap-dai-loan-lua-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-12.html
 lastopen = 2024-06-09 22:43:24
 
 [search]
-lastsearch = 2024-07-19 22:44:17
+lastsearch = 2024-07-20 01:18:43
 
 [tiki.vn]
 match = 16.0%%
@@ -44,7 +44,7 @@ url = https://www.roc-taiwan.org/vnsgn_vi/index.html
 [books.google.com]
 match = -40.0%%
 title = Văn Mẫu Lớp 12 (Tập 2) - Google Books Result
-url = https://books.google.com/books?id=Y-AHEQAAQBAJ&pg=PT590&lpg=PT590&dq=chieu+gap+dai+loan+lua+12&source=bl&ots=NzfS23pbVi&sig=ACfU3U1YtjJnpZhX6AWbOsFIofg_TyILEg&hl=en&sa=X&ved=2ahUKEwjt777osbKHAxUnEVkFHQ99Bp0Q6AF6BAgZEAM
+url = https://books.google.com/books?id=Y-AHEQAAQBAJ&pg=PT590&lpg=PT590&dq=chieu+gap+dai+loan+lua+12&source=bl&ots=NzfS3_l7Tg&sig=ACfU3U15gPb6xz_OWzE0Z7edgb-KXpq1dw&hl=en&sa=X&ved=2ahUKEwjn6_fN27OHAxUDFlkFHX0qCjYQ6AF6BAgZEAM
 
 [www.skyscanner.com.vn]
 match = -52.0%%
