--- a/images/man-ren-16/config.ini
+++ b/images/man-ren-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-16.html
 lastopen = 2024-06-07 00:52:49
 
 [search]
-lastsearch = 2024-07-20 00:37:59
+lastsearch = 2024-07-20 01:20:34
 
 [quizlet.com]
 match = -170.0%%
@@ -52,9 +52,9 @@ title = MC Ren
 url = https://en.wikipedia.org/wiki/MC_Ren
 
 [books.google.com]
-match = -440.0%%
-title = The Monasteries of the Wadi 'n Natrûn: The history of the ...
-url = https://books.google.com/books?id=_mIPAQAAMAAJ&pg=PA206&lpg=PA206&dq=man+ren+16&source=bl&ots=HlowAiZ8GQ&sig=ACfU3U1C6A5HE0IVpkuay2bRpo0U3tKMOw&hl=en&sa=X&ved=2ahUKEwiEndTA0rOHAxWpEFkFHU5kBDgQ6AF6BAgVEAM
+match = -430.0%%
+title = Proceedings of the 10th West Coast Conference on Formal ...
+url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlfmIGnl9&sig=ACfU3U3M9Y40Iw0l7B7gmQWQF8fMJPIJvw&hl=en&sa=X&ved=2ahUKEwienNqC3LOHAxULFVkFHTHIDzYQ6AF6BAgVEAM
 
 [www.phillyvoice.com]
 match = 0.0%%
