--- a/images/nem-sieu-nhe-9f-16/config.ini
+++ b/images/nem-sieu-nhe-9f-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-16.html
 lastopen = 2024-06-10 00:30:12
 
 [search]
-lastsearch = 2024-07-19 23:37:01
+lastsearch = 2024-07-20 01:18:32
 
 [www.instagram.com]
 match = -50.0%%
@@ -17,14 +17,14 @@ title = Orangesky Cần Câu Cá Biển Yuantou ...
 url = https://www.lazada.vn/products/orangesky-can-cau-ca-bien-yuantou-can-cau-ca-yuantou-sieu-nhe-can-nem-can-cau-ca-yuantou-i2413511947.html
 
 [www.facebook.com]
-match = -33.3%%
-title = Nem Nướng
-url = https://www.facebook.com/p/Nem-Nướng-100054522756775/
+match = -155.6%%
+title = Nghi Ngờ Chồng "Ăn Nem" Với Bạn Thân Và Sự Thật Phía Sau
+url = https://www.facebook.com/msmile2022/videos/nghi-ngờ-chồng-ăn-nem-với-bạn-thân-và-sự-thật-phía-sau/1055228991798802/
 
 [thegioinem.com]
-match = -111.1%%
-title = Bảng giá nệm Vạn Thành khuyến mãi mới nhất 2024
-url = https://thegioinem.com/bang-gia-nem-van-thanh-moi.html
+match = 17.6%%
+title = Bảng Giá Nệm 2024
+url = https://thegioinem.com/bang-gia-nem
 
 [www.youtube.com]
 match = -144.4%%
@@ -47,9 +47,9 @@ title = Quay lại NEM NƯỚNG ĐÀ LẠT - BÉ... - Địa điểm ăn uống 
 url = https://m.facebook.com/story.php/?story_fbid=763585472473204&id=100064652743390
 
 [lanchi.vn]
-match = 16.7%%
-title = NEM CHUA HÀ THÀNH 200G
-url = https://lanchi.vn/san-pham/nem-chua-ha-thanh-200g/
+match = -44.4%%
+title = NƯỚC MẮM NAM NGƯ SIÊU TIẾT KIỆM 800ML
+url = https://lanchi.vn/san-pham/nuoc-mam-nam-ngu-sieu-tiet-kiem-800ml/
 
 [www.tiktok.com]
 match = -133.3%%
