--- a/images/ruot-nem-korea-140x190x09/config.ini
+++ b/images/ruot-nem-korea-140x190x09/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-140x190x09.html
 lastopen = 2024-06-11 23:28:41
 
 [search]
-lastsearch = 2024-07-20 00:39:17
+lastsearch = 2024-07-20 01:16:02
 
 [www.riotgames.com]
 match = -84.0%%
@@ -105,4 +105,9 @@ url = https://twitter.com/r2b2grandma/status/914646244206743552
 match = -40.0%%
 title = Im in Usa Im in Canada Im in South Korea
 url = https://www.tiktok.com/discover/im-in-usa-im-in-canada-im-in-south-korea?lang=en
+
+[www.ef.com]
+match = 0.0%%
+title = 
+url = https://www.ef.com/wwen/learn-a-language/korean/
 
