--- a/images/tham-ni-xop-hinh-60/config.ini
+++ b/images/tham-ni-xop-hinh-60/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ni-xop-hinh-60.html
 lastopen = 2024-06-07 00:35:14
 
 [search]
-lastsearch = 2024-07-20 00:39:39
+lastsearch = 2024-07-20 01:21:19
 
 [xoptraisan.info]
 match = -147.4%%
@@ -52,9 +52,9 @@ title = Thảm xốp trải lót sàn mặt nỉ hoa văn 60x60 giá rẻ
 url = http://thamsami.com/san-pham/314/tham-xop-mat-ni-hoa-van-au-lac-60-60-10-tam.html
 
 [trieuchau.com]
-match = -68.4%%
-title = 60*60*10 tấm- Thảm xốp mặt nỉ hoa văn Âu Lạc
-url = http://trieuchau.com/vi-vn/1057/28071/Tham-Xop-60x60cm/606010-tam-Tham-xop-mat-ni-hoa-van-Au-Lac
+match = -63.2%%
+title = 30*30*18 tấm - Thảm xốp mặt nỉ ghép Âu Lạc
+url = https://trieuchau.com/vi-vn/1057/28077/Tham-Xop-30x30cm/303018-tam--Tham-xop-mat-ni-ghep-Au-Lac
 
 [thamachau.vn]
 match = -52.6%%
