--- a/images/bo-bon-mua-epm19064-180x200/config.ini
+++ b/images/bo-bon-mua-epm19064-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-epm19064-180x200.html
 lastopen = 2024-06-06 17:08:27
 
 [search]
-lastsearch = 2024-07-19 23:35:45
+lastsearch = 2024-07-20 01:33:41
 
 [everonvn.com.vn]
 match = 7.4%%
@@ -102,7 +102,7 @@ title = Aegean Leather Oversized Fountain Pen Case
 url = https://www.youtube.com/watch?v=ge-8pHMQi9Y
 
 [www.fountainpennetwork.com]
-match = -100.0%%
-title = Fs: Aurora 88 Slim, Bexley Americana, Pilot Ice Blue Vp Le, ...
-url = https://www.fountainpennetwork.com/forum/topic/192106-fs-aurora-88-slim-bexley-americana-pilot-ice-blue-vp-le-montblanc-classic-old-parker-duofold-box/
+match = -81.5%%
+title = Half price awesome Visconti FP - Historical Sales Forums
+url = https://www.fountainpennetwork.com/forum/topic/96228-half-price-awesome-visconti-fp/
 
