--- a/images/ruot-nem-korea-140x190x09/config.ini
+++ b/images/ruot-nem-korea-140x190x09/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-140x190x09.html
 lastopen = 2024-06-11 23:28:41
 
 [search]
-lastsearch = 2024-07-20 01:16:02
+lastsearch = 2024-07-20 01:36:03
 
 [www.riotgames.com]
 match = -84.0%%
@@ -110,4 +110,9 @@ url = https://www.tiktok.com/discover/im-in-usa-im-in-canada-im-in-south-korea?l
 match = 0.0%%
 title = 
 url = https://www.ef.com/wwen/learn-a-language/korean/
+
+[www.internations.org]
+match = 0.0%%
+title = 
+url = https://www.internations.org/south-korea-expats/guide/working
 
