--- a/images/tui-korea-14/config.ini
+++ b/images/tui-korea-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-korea-14.html
 lastopen = 2024-06-17 10:35:06
 
 [search]
-lastsearch = 2024-07-20 00:33:09
+lastsearch = 2024-07-20 01:38:16
 
 [www.tui.co.uk]
 match = -33.3%%
@@ -42,8 +42,8 @@ title = TUI commands logging??? - Forums
 url = https://www.cfd-online.com/Forums/fluent/45792-tui-commands-logging.html
 
 [www.reddit.com]
-match = 25.0%%
-title = Tui Manchester
+match = -108.3%%
+title = Tui Manchester : r/flightradar24
 url = https://www.reddit.com/r/flightradar24/comments/1e6yt5g/tui_manchester/
 
 [www.travelgossip.co.uk]
