CI images update

--- a/images/chieu-gap-dai-loan-lua-16/config.ini
+++ b/images/chieu-gap-dai-loan-lua-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-16.html
 lastopen = 2024-06-09 21:33:58
 
 [search]
-lastsearch = 2024-07-19 21:49:40
+lastsearch = 2024-07-20 01:49:28
 
 [www.youtube.com]
 match = -48.0%%
@@ -42,9 +42,9 @@ title = Đài Loan và Nhật Bản hợp tác kêu gọi toàn cầu chống th
 url = https://trithucvn.co/the-gioi/dai-loan-va-nhat-ban-hop-tac-keu-goi-toan-cau-chong-thu-hoach-noi-tang.html
 
 [books.google.com]
-match = -84.0%%
-title = Quân lực Việt-Nam: Quân lực Việt Nam Cộng Hòa trong giai ...
-url = https://books.google.com/books?id=RvXeAAAAMAAJ&pg=PA146&lpg=PA146&dq=chieu+gap+dai+loan+lua+16&source=bl&ots=aZ3Suf2aaP&sig=ACfU3U0hWB4DiGcPYZzrGM7NkYUZ8hzdaQ&hl=en&sa=X&ved=2ahUKEwj8gPSo1a2HAxUoFFkFHWyUAywQ6AF6BAgYEAM
+match = -56.0%%
+title = Địa chí Nam Định - Page 451 - Google Books Result
+url = https://books.google.com/books?id=3nNuAAAAMAAJ&pg=PA451&lpg=PA451&dq=chieu+gap+dai+loan+lua+16&source=bl&ots=Km7mYDbjZl&sig=ACfU3U1vM37wmow1I-OuawT2FTnU7BYoXA&hl=en&sa=X&ved=2ahUKEwjB9sG94rOHAxXeM2IAHSvsAjYQ6AF6BAgVEAM
 
 [www.skyscanner.com.vn]
 match = -48.0%%
