--- a/images/tham-giuong-ii-150x190/config.ini
+++ b/images/tham-giuong-ii-150x190/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-ii-150x190.html
 lastopen = 2024-06-17 14:26:11
 
 [search]
-lastsearch = 2024-07-20 01:24:02
+lastsearch = 2024-07-20 01:50:43
 
 [demxanh.com]
-match = -22.7%%
-title = Thảm trải giường cao su non màu xanh nhạt
-url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-xanh-nhat.html
+match = 0.0%%
+title = Thảm trải giường cao su non màu ghi
+url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-ghi.html
 
 [demre.com.vn]
 match = 18.2%%
@@ -27,8 +27,8 @@ title = Ga chống thấm Olympia cotton cao cấp mới
 url = https://demolympia.com/ga-chong-tham-olympia-cotton-cao-cap-moi/
 
 [thegioidemonline.vn]
-match = -109.1%%
-title = Thảm trải giường lông cừu TLC04 giá rẻ - Hà Nội - Chăn ga gối
+match = -50.0%%
+title = Thảm trải giường lông cừu TLC04 giá rẻ - Hà Nội
 url = https://thegioidemonline.vn/tham-trai-giuong-long-cuu-tlc-04.html
 
 [ru9.vn]
@@ -87,9 +87,9 @@ title = Thảm trải giường cao su non màu trắng
 url = https://thegioidemonline.com/tham-trai-giuong-cao-su-non-mau-trang.html
 
 [vn.my-best.com]
-match = -100.0%%
-title = Top 10 Thảm Trải Sàn tốt nhất hiện nay (Tư vấn mua 2024)
-url = https://vn.my-best.com/37075
+match = -68.2%%
+title = Top 8 Giường Tầng Thông Minh đẹp và tốt nhất ...
+url = https://vn.my-best.com/35793
 
 [www.sendo.vn]
 match = -63.6%%
@@ -120,4 +120,9 @@ url = https://metric.vn/tham-trai-giuong-ngu
 match = -109.1%%
 title = Tago | تغريد طيب | Swing and relax 🧘🏻‍♀️ #visitzanzibar ...
 url = https://www.instagram.com/callme_tago/p/C7tMbUTt8Jl/
+
+[www.linkedin.com]
+match = -86.4%%
+title = Kích thước giường ngủ chuẩn phổ biến ở Việt Nam và ...
+url = https://www.linkedin.com/pulse/kích-thước-giường-ngủ-chuẩn-phổ-biến-ở-việt-nam-và-quốc-lury
 
