--- a/images/bo-bon-mua-epm21069-180x200/config.ini
+++ b/images/bo-bon-mua-epm21069-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-epm21069-180x200.html
 lastopen = 2024-06-07 00:16:06
 
 [search]
-lastsearch = 2024-07-20 00:49:16
+lastsearch = 2024-07-20 02:13:53
 
 [everon.online]
 match = -7.4%%
@@ -12,14 +12,14 @@ title = Bộ Chăn Ga Gối Everon SR01 Chính Hãng
 url = https://everon.online/products/bo-everon-sr01
 
 [everonvn.com.vn]
-match = -59.3%%
-title = Bộ Chăn Ga Everon Epm-21071 chất liệu Gỗ Sồi (Modal) ...
+match = -74.1%%
+title = Bộ Chăn Ga Everon Epm-21071 chất liệu Gỗ Sồi (Modal) mẫu ...
 url = https://everonvn.com.vn/everon/2130/bo-everon-epm-21071
 
 [tongdailyeveron.com.vn]
-match = 29.6%%
-title = Bộ ga phủ 180*200 EPM 20069
-url = https://tongdailyeveron.com.vn/products/bo-ga-phu-180-200-epm20069
+match = -5.3%%
+title = Bộ Chăn Ga Giảm Giá
+url = https://tongdailyeveron.com.vn/collections/bo-chan-ga-giam-gia
 
 [demxanh.com]
 match = -7.4%%
@@ -37,9 +37,9 @@ title = Bộ chăn ga Everon ESB -22020
 url = https://everonhn.com.vn/bo-chan-ga-everon-esc-22020
 
 [everon.net.vn]
-match = -18.5%%
-title = Bộ Everon Epm-21069 - Chăn ga gối đệm Everon
-url = https://everon.net.vn/everon/2132/bo-everon-epm-21069
+match = 15.8%%
+title = Bộ Everon Epm-21060
+url = https://everon.net.vn/everon/2109/bo-everon-epm-21060
 
 [sieuthidemhanquoc.com.vn]
 match = 18.5%%
