--- a/images/bo-phu-mau-160x200/config.ini
+++ b/images/bo-phu-mau-160x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-phu-mau-160x200.html
 lastopen = 2024-06-17 03:11:36
 
 [search]
-lastsearch = 2024-07-20 00:19:01
+lastsearch = 2024-07-20 02:20:06
 
 [tiki.vn]
 match = -122.2%%
@@ -42,9 +42,9 @@ title = Bộ ga chun Cotton chống thấm màu xám đậm
 url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-xam-dam.html
 
 [foreverbedding.net]
-match = -66.7%%
-title = Bộ ga phủ Passion A114 - Forever Bedding
-url = https://foreverbedding.net/bo-ga-phu-passion-a114
+match = -61.1%%
+title = Bộ ga phủ Common C101 - Forever Bedding
+url = https://foreverbedding.net/bo-ga-phu-common-c101
 
 [aeoneshop.com]
 match = -105.6%%
