--- a/images/chan-4-kg-mao-tan/config.ini
+++ b/images/chan-4-kg-mao-tan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-4-kg-mao-tan.html
 lastopen = 2024-06-09 21:36:01
 
 [search]
-lastsearch = 2024-07-20 01:44:02
+lastsearch = 2024-07-20 02:18:32
 
 [www.facebook.com]
 match = -141.2%%
@@ -22,14 +22,14 @@ title = Chăn Mao Tân 4kg - Điệp Xuân
 url = https://www.diepxuan.com/chan-mao-tan-4kg.html
 
 [m.facebook.com]
-match = -176.5%%
-title = Royal Durian Singapore - ⛟ Free delivery Get 4kg of Mao ...
+match = -194.1%%
+title = Royal Durian Singapore - ⛟ Free delivery Get 4kg of Mao Shan ...
 url = https://m.facebook.com/RoyalDurian/photos/a.3010278729046072/3525143447559595/?type=3
 
 [en.wikipedia.org]
-match = 0.0%%
-title = Tang dynasty
-url = https://en.wikipedia.org/wiki/Tang_dynasty
+match = 20.0%%
+title = Chinese polearm
+url = https://en.wikipedia.org/wiki/Chinese_polearm
 
 [www.amazon.com]
 match = -135.3%%
