--- a/images/chieu-lac-d2-08/config.ini
+++ b/images/chieu-lac-d2-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-08.html
 lastopen = 2024-06-20 13:15:42
 
 [search]
-lastsearch = 2024-07-20 01:16:45
+lastsearch = 2024-07-20 02:14:36
 
 [batdongsan.com.vn]
 match = -240.0%%
@@ -57,9 +57,9 @@ title = Điệp Xuân Chiếu lác D2 08
 url = https://www.diepxuan.com/chieu-lac-d2-08.html
 
 [www.facebook.com]
-match = 0.0%%
-title = Black Kingdom - D2
-url = https://www.facebook.com/photo.php?fbid=925380399591113&id=100063574839369&set=a.647966903999132&locale=ta_IN
+match = -46.7%%
+title = Dog Lovers Ho Chi Minh City
+url = https://www.facebook.com/groups/1522115054746349/
 
 [lacvietauction.vn]
 match = -80.0%%
@@ -325,4 +325,9 @@ url = https://bidv.com.vn/wps/wcm/connect/c134ee41-9574-458f-b39a-6b5fb9d23f2e/L
 match = -146.7%%
 title = DANH SÁCH HÀNG HÓA NHẬP KHẨU YÊU CẦU KIỂM ...
 url = https://files.customs.gov.vn/CustomsCMS/TONG_CUC/2022/1/7/252DSsoitruocTongHop(7.1)c.pdf
+
+[vpcqcsdt.bocongan.gov.vn]
+match = -40.0%%
+title = Tra cứu đối tượng truy nã
+url = https://vpcqcsdt.bocongan.gov.vn/Truy-nã-TP/Tra-cứu
 
