CI images update

--- a/images/chan-cuu-loai-2/config.ini
+++ b/images/chan-cuu-loai-2/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-cuu-loai-2.html
 lastopen = 2024-06-09 23:05:55
 
 [search]
-lastsearch = 2024-07-20 00:34:56
+lastsearch = 2024-07-20 02:24:14
 
 [tiki.vn]
 match = -133.3%%
@@ -37,14 +37,14 @@ title = Nhận biết chăn lông cừu hữu cơ và chăn tổng hợp - Lasan
 url = https://lasantevn.com/nhan-biet-chan-long-cuu-huu-co-va-chan-tong-hop/
 
 [shopee.vn]
-match = -186.7%%
-title = Chăn cừu 2 lớp nặng 2.1 kg Lasante Pháp đắp thu đông, ...
-url = https://shopee.vn/Chăn-cừu-2-lớp-nặng-2.1-kg-Lasante-Pháp-đắp-thu-đông-chung-cư-văn-phòng-i.8605690.19859463874
+match = -86.7%%
+title = chăn cừu giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=chăn cừu
 
 [changadep88.vn]
-match = -80.0%%
-title = Giá Chăn lông cừu Anh Latalia và Lasante
-url = https://changadep88.vn/chan-long-cuu-anh-gia-bao-nhieu/
+match = -86.7%%
+title = Chăn lông cừu 2 lớp Lasante - Scarlet Ghi
+url = https://changadep88.vn/san-pham/chan-thu-dong-mem-mai-2-lop-lasante-scarlet/
 
 [www.demgiare.net]
 match = -153.3%%
@@ -145,4 +145,9 @@ url = https://znews.vn/loai-soi-rinh-rap-cuoc-song-nguoi-chan-cuu-tren-day-nui-a
 match = -106.7%%
 title = Chăn lông cừu 2 lớp loại dày cho bé nhiều mẫu
 url = https://sieuthinguyenkim.com/chan-long-cuu-2-lop-loai-day-cho-nti69906088.html
+
+[duicuunuongnhatthuyphong.com]
+match = 40.0%%
+title = Chân cừu chiên giòn
+url = https://duicuunuongnhatthuyphong.com/chan-cuu-chien-gion
 
