--- a/images/chan-3-k-tuyet-sin-thai-lan/config.ini
+++ b/images/chan-3-k-tuyet-sin-thai-lan/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-3-k-tuyet-sin-thai-lan.html
 lastopen = 2024-06-09 23:46:49
 
 [search]
-lastsearch = 2024-07-19 21:21:15
+lastsearch = 2024-07-20 02:27:50
 
 [shopee.vn]
-match = -14.8%%
-title = chăn lông 3kg giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=chăn lông 3kg  
+match = 7.4%%
+title = CHĂN LÔNG TUYẾT NHUNG CAO CẤP Thái Lan Loại 4kg
+url = https://shopee.vn/CHĂN-LÔNG-TUYẾT-NHUNG-CAO-CẤP-Thái-Lan-Loại-4kg-i.126028938.4857799045
 
 [h5.lazada.vn]
 match = -11.1%%
@@ -52,9 +52,9 @@ title = Chăn Thái Lan Toto TT300
 url = https://phugiatrading.com/chan-thai-lan-toto-tt301/
 
 [www.youtube.com]
-match = -63.0%%
-title = Công bố thủ đoạn đầu độc 6 người Việt và gốc Việt tại Thái ...
-url = https://www.youtube.com/watch?v=jP8fe_ad4Tw
+match = -55.6%%
+title = Điểm Tin Nóng Tối 18/7: Bị Cự Tuyệt Tình Cảm, Người Đàn ...
+url = https://www.youtube.com/watch?v=d9GiHdAHQsg
 
 [lasantevn.com]
 match = -11.1%%
