--- a/images/tam-trai-ks/config.ini
+++ b/images/tam-trai-ks/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trai-ks.html
 lastopen = 2024-06-07 00:26:12
 
 [search]
-lastsearch = 2024-07-20 00:38:57
+lastsearch = 2024-07-20 02:25:40
 
 [www.linkedin.com]
 match = -172.7%%
@@ -27,9 +27,9 @@ title = Tam Thi Tran Obituary - Wichita, KS
 url = https://www.dignitymemorial.com/obituaries/wichita-ks/tam-tran-9902717
 
 [www.facebook.com]
-match = -227.3%%
-title = Eat Healthier and more Economically - Salina
-url = https://www.facebook.com/SalinaRegionalHealthCenter/videos/eat-healthier-and-more-economically/859948698432933/
+match = -90.9%%
+title = Khách Sạn Anh Minh Tam Đảo
+url = https://www.facebook.com/khachsan.anhminh.tamdao/
 
 [www.hoteljob.vn]
 match = -327.3%%
@@ -108,8 +108,8 @@ url = https://www.sesostrisshrine.org/pages/uploaded_files/15_JF.pdf
 
 [kstoolsvietnam.vn]
 match = -327.3%%
-title = Kéo cắt thép tấm KS Tools 118.0148 cắt thuận tay trái.
-url = https://kstoolsvietnam.vn/keo-cat-ton-tam/keo-cat-thep-tam-ks-tools-1180148-cat-thuan-tay-trai.html
+title = Kéo cắt kim loại 240 mm KS Tools 118.0053 cắt tay trái.
+url = https://kstoolsvietnam.vn/keo-cat-ton-tam/keo-cat-kim-loai-240-mm-ks-tools-1180053-cat-tay-trai.html
 
 [sagatexvietnam.com.vn]
 match = -345.5%%
@@ -385,4 +385,9 @@ url = https://statistik.d-u-v.org/getresultperson.php?runner=106449
 match = -200.0%%
 title = Mt. Tam Trail Run - Running in Mill Valley
 url = https://www.letsdothis.com/us/e/mt-tam-trail-run-168359
+
+[batdongsan.com.vn]
+match = -345.5%%
+title = Chính chủ chuyển nhượng 7175m2 trung tâm thị trấn Tam ...
+url = https://batdongsan.com.vn/ban-trang-trai-khu-nghi-duong-duong-quoc-lo-2b-thi-tran-tam-dao/chinh-chu-chuyen-nhuong-7175m2-trung-vinh-phuc-nha-hang-ks-homestay-cafe-pr40294136
 
