--- a/images/tui-warmdream-2-gap-180x200x12/config.ini
+++ b/images/tui-warmdream-2-gap-180x200x12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-2-gap-180x200x12.html
 lastopen = 2024-06-17 10:42:05
 
 [search]
-lastsearch = 2024-07-20 01:18:10
+lastsearch = 2024-07-20 02:25:08
 
 [www.diepxuan.com]
 match = 6.7%%
@@ -17,9 +17,9 @@ title = Amazon.com: Customer Questions & Answers
 url = https://www.amazon.com/ask/questions/asin/B00AKI5Y9E/ref=ask_atf_aqp_dp
 
 [bwca.com]
-match = -20.0%%
-title = BWCA Your Tent? Boundary Waters Gear Forum
-url = https://bwca.com/index.cfm?fuseaction=forum.thread&threadid=129974&confid=1&forumid=15
+match = -333.3%%
+title = Thread
+url = https://bwca.com/messageboards/printThread.cfm?confId=1&forumId=12&threadId=851824
 
 [www.sevenstring.org]
 match = -6.7%%
