--- a/images/chieu-lac-soc-08/config.ini
+++ b/images/chieu-lac-soc-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-08.html
 lastopen = 2024-06-06 16:42:06
 
 [search]
-lastsearch = 2024-07-20 00:33:27
+lastsearch = 2024-07-20 03:18:44
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -680,4 +680,9 @@ url = https://vinhphuc.gov.vn/ct/cms/thongbao/Lists/ThongBao/View_Detail.aspx?It
 match = -75.0%%
 title = Người chủ nhiệm “Ngân hàng máu sống”
 url = https://congan.hatinh.gov.vn/bai-viet/nguoi-chu-nhiem-ngan-hang-mau-song_1721356271.caht
+
+[coopsmile.vn]
+match = -93.8%%
+title = Hệ thống cửa hàng Co.opSmile Coopsmile
+url = https://coopsmile.vn/pages/he-thong-cua-hang-co-opsmile
 
