--- a/images/chieu-truc-cong-ty-12-19/config.ini
+++ b/images/chieu-truc-cong-ty-12-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-12-19.html
 lastopen = 2024-06-09 23:41:54
 
 [search]
-lastsearch = 2024-07-20 01:33:52
+lastsearch = 2024-07-20 03:20:19
 
 [chieutrucsaigon.com]
 match = 33.3%%
@@ -17,9 +17,9 @@ title = Bảng giá chiếu trúc Hương Trúc mới nhất 2024
 url = https://demxanh.com/bang-gia-chieu-truc-huong-truc-moi-nhat-2019.html
 
 [chieutrelanlan.com]
-match = -70.8%%
-title = Giá chiếu trúc 8 tấc, 1m, 1m2, 1m6, 1m8 có trên thị trường
-url = https://chieutrelanlan.com/chieu-truc-voi-day-du-cac-size-cho-nguoi-doc-than-cho-ca-dai-gia-dinh-k16.html
+match = -66.7%%
+title = Chiếu trúc 0.8m hạt nhỏ loại không viền màu trắng chất ...
+url = https://chieutrelanlan.com/chieu-truc-mat-nho-loai-khong-vien-mau-trang-80x190cm-19.html
 
 [trangvangvietnam.com]
 match = -37.5%%
@@ -115,4 +115,9 @@ url = https://quochoi.vn/
 match = -54.2%%
 title = Chiếu Hương Trúc - dòng chiếu hạt cao cấp - Lombomshop!
 url = https://lombom.com/chieu-huong-truc/
+
+[demsonghonghanoi.com]
+match = -83.3%%
+title = Loại chiếu trúc nào tốt nhất trên thị trường? - ĐỆM SÔNG HỒNG
+url = https://demsonghonghanoi.com/loai-chieu-truc-nao-tot-nhat-tren-thi-truong/
 
