--- a/images/man-re-trang-16/config.ini
+++ b/images/man-re-trang-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-16.html
 lastopen = 2024-06-09 23:51:34
 
 [search]
-lastsearch = 2024-07-19 20:20:22
+lastsearch = 2024-07-20 03:17:19
 
 [www.gov.uk]
 match = -200.0%%
@@ -182,9 +182,9 @@ title = Premier League Football News, Fixtures, Scores & Results
 url = https://www.premierleague.com/
 
 [books.google.com]
-match = -233.3%%
-title = Evangeli Basun [weekly]. - Volume 6 - Google Books Result
-url = https://books.google.com/books?id=X58zAQAAMAAJ&pg=RA7-PP1&lpg=RA7-PP1&dq=man+re+trang+16&source=bl&ots=s1SObC0HoD&sig=ACfU3U3DJ61ak9IBi5Rykg3KFqAepaKHzw&hl=en&sa=X&ved=2ahUKEwjS78ehyLKHAxXKzMkDHcmHD_sQ6AF6BAgeEAM
+match = -253.3%%
+title = The Japan Magazine: A Representative Magazine of Things Japanese
+url = https://books.google.com/books?id=nXRjJ2fGkMcC&pg=PT151&lpg=PT151&dq=man+re+trang+16&source=bl&ots=QbeDNfCpA_&sig=ACfU3U0LY2SqdxNwQT-k159A-bqFPeEqdw&hl=en&sa=X&ved=2ahUKEwjt0fqO9rOHAxX_jokEHcsrDZkQ6AF6BAgiEAM
 
 [www.nolo.com]
 match = 0.0%%
