--- a/images/man-tu-bung-20-22/config.ini
+++ b/images/man-tu-bung-20-22/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/man-tu-bung-20-22.html
 lastopen = 2024-06-09 23:31:04
 
 [search]
-lastsearch = 2024-07-20 00:18:41
+lastsearch = 2024-07-20 03:21:35
 
 [www.bible.com]
-match = -88.2%%
-title = LUKA 22 | MIZCLBSI Bible | YouVersion
-url = https://www.bible.com/bible/1048/LUK.22.MIZCLBSI
+match = 23.1%%
+title = sawltak 20:22
+url = https://www.bible.com/bible/368/ACT.20.22.TDB
 
 [mizobibleblog.wordpress.com]
-match = -111.8%%
-title = Exodus 1-40 - Mizo BIBle - WordPress.com
-url = https://mizobibleblog.wordpress.com/2017/02/24/exodus-1-40/
+match = -123.5%%
+title = Thufingte 1-31 - Mizo BIBle - WordPress.com
+url = https://mizobibleblog.wordpress.com/2017/02/26/thufingte-1-31/
 
 [www.biblegateway.com]
 match = -82.4%%
@@ -82,9 +82,9 @@ title = Gisele Bündchen (@gisele) • Instagram photos and videos
 url = https://www.instagram.com/gisele/?hl=en
 
 [www.jw.org]
-match = -152.9%%
-title = Buk Song 22 | Online Bible | New World Translation
-url = https://www.jw.org/tpi/laibreri/baibel/nwt/ol-buk/buk-song/22/
+match = -129.4%%
+title = Namba 20 | Online Bible | New World Translation
+url = https://www.jw.org/tpi/laibreri/baibel/nwt/ol-buk/namba/20/
 
 [erakini.id]
 match = -164.7%%
