--- a/images/tui-singapore-150x190x09/config.ini
+++ b/images/tui-singapore-150x190x09/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-singapore-150x190x09.html
 lastopen = 2024-06-17 10:41:24
 
 [search]
-lastsearch = 2024-07-20 02:15:43
+lastsearch = 2024-07-20 03:15:51
 
 [www.diepxuan.com]
 match = 5.3%%
@@ -12,9 +12,9 @@ title = Túi nệm - Điệp Xuân
 url = https://www.diepxuan.com/nem-bong/tui-nem.html
 
 [www.tui.co.uk]
-match = -10.5%%
-title = Find & Book Flights
-url = https://www.tui.co.uk/flight/
+match = -58.3%%
+title = Where We Fly | Flights with TUI 2024 / 2025
+url = https://www.tui.co.uk/flight/where-we-fly
 
 [www.seatrade-cruise.com]
 match = -100.0%%
@@ -39,7 +39,7 @@ url = https://boards.cruisecritic.com/topic/2979012-sgac-with-myica-app-query-en
 [www.tripadvisor.com]
 match = -50.0%%
 title = SG Arrival Card and ePass - Singapore Forum
-url = https://www.tripadvisor.com/ShowTopic-g294262-i1747-k14626749-o10-SG_Arrival_Card_and_ePass-Singapore.html
+url = https://www.tripadvisor.com/ShowTopic-g294262-i1747-k14626749-SG_Arrival_Card_and_ePass-Singapore.html
 
 [www.youtube.com]
 match = -133.3%%
