CI images update

--- a/images/chieu-lac-gam-18/config.ini
+++ b/images/chieu-lac-gam-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-18.html
 lastopen = 2024-06-09 23:47:34
 
 [search]
-lastsearch = 2024-07-19 21:49:54
+lastsearch = 2024-07-20 03:34:11
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -82,9 +82,9 @@ title = Turtle Beach USA
 url = https://www.turtlebeach.com/search?q=✅+TK88+✅TK88+Đăng+Ký+Thành+Viên✅✅+Copy_Tk88.co+✅+Nhà+cái+uy+tín+✅++Seopro
 
 [moon.vn]
-match = -206.2%%
-title = Con lắc đơn chiều dài l = 0,5 (m), m = 100 gam dao động ở ...
-url = https://moon.vn/hoi-dap/con-lac-don-chieu-dai-l-05-m-m-100-gam-dao-dong-o-noi-co-g-98-ms2-voi-bien-do-goc-ba-679117
+match = -193.8%%
+title = Một con lắc lò xo dao động điều hòa theo phương thẳng ...
+url = https://moon.vn/hoi-dap/mot-con-lac-lo-xo-dao-dong-dieu-hoa-theo-phuong-thang-dung-chieu-dai-tu-nhien-cua-lo-659716
 
 [djexpress.com.vn]
 match = -68.8%%
@@ -227,9 +227,9 @@ title = Secured Home of cokhidaitienphat.com
 url = https://cokhidaitienphat.com/
 
 [www.quora.com]
-match = -106.2%%
-title = What are some swear words in Vietnamese?
-url = https://www.quora.com/What-are-some-swear-words-in-Vietnamese
+match = -206.2%%
+title = Was the Nguyen dynasty similar to the South or North ...
+url = https://www.quora.com/Was-the-Nguyen-dynasty-similar-to-the-South-or-North-Vietnamese-governments
 
 [congan.binhthuan.gov.vn]
 match = -206.2%%
@@ -412,9 +412,9 @@ title = What does 18.7 bore equate to
 url = https://www.trapshooters.com/threads/what-does-18-7-bore-equate-to.84941/
 
 [olm.vn]
-match = -212.5%%
-title = Một mảnh đất hình thang có đáy lớn 27,6m, đáy bé bằng 2 ...
-url = https://olm.vn/cau-hoi/mot-manh-dat-hinh-thang-co-day-lon-276m-day-be-bang-23-day-lon-chieu-cao-85m-nguoi-ta-trong-lac-tren-manh-dat-do-cu-1m-vuong-thu-duoc-3kg-lac-c.68946291283
+match = -143.8%%
+title = một thửa ruộng hinh chữ nhật có chiều dài 35m ...
+url = https://olm.vn/cau-hoi/mot-thua-ruong-hinh-chu-nhat-co-chieu-dai-35m-chieu-rong-20m-nguoi-ta-trong-lac-tren-thua-ruong-do-cu-25m2-thu-duoc-60-kg-cu-lac-hoi-tren-thua-ru.46511838634
 
 [sovhtt.caobang.gov.vn]
 match = -237.5%%
@@ -545,4 +545,9 @@ url = https://nbtv.vn/nhung-luu-y-trong-che-do-dinh-duong-cho-benh-nhan-tang-huy
 match = -200.0%%
 title = 4 chiến dịch nổi bật tuần qua: Heinz hợp tác với Marvel ...
 url = https://advertisingvietnam.com/4-chien-dich-noi-bat-tuan-qua-heinz-hop-tac-voi-marvel-tung-ra-2-loai-nuoc-sot-phien-ban-gioi-han-mcdonalds-ky-niem-sinh-nhat-lan-thu-50-cung-loat-ap-phich-phong-cach-retro-p24842
+
+[tanhkhong.org]
+match = -75.0%%
+title = Thích Không Chiếu: NHỔ ĐINH THÁO CHỐT
+url = https://tanhkhong.org/p105a1654/11/thich-khong-chieu-nho-dinh-thao-chot
 
