--- a/images/bo-chan-ga-goi-uc-solid-18/config.ini
+++ b/images/bo-chan-ga-goi-uc-solid-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-uc-solid-18.html
 lastopen = 2024-06-07 01:32:39
 
 [search]
-lastsearch = 2024-07-19 23:40:46
+lastsearch = 2024-07-20 03:34:34
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -37,9 +37,9 @@ title = Bộ Chăn Ga Gối Solid SA 18 (120*190 cm) - Koala
 url = https://www.koala.vn/bo-chan-ga-goi-solid-sa-18.html
 
 [shopee.vn]
-match = -11.5%%
-title = Bộ Chăn Ga Vỏ Gối Mẫu Cho Bé Hoạt Hình 1m6 x 2m ...
-url = https://shopee.vn/Bộ-Chăn-Ga-Vỏ-Gối-Mẫu-Cho-Bé-Hoạt-Hình-1m6-x-2m-(-vỏ-gối-trần-bông-)-i.147845394.5851022308
+match = -46.2%%
+title = Bộ chăn ga gối cotton 3F phong cách khách sạn, vải mềm ...
+url = https://shopee.vn/Bộ-chăn-ga-gối-cotton-3F-phong-cách-khách-sạn-vải-mềm-đẹp-không-xù-lông-i.401385750.8385068624
 
 [bedding.vn]
 match = -42.3%%
@@ -67,8 +67,8 @@ title = Bộ lụa 4T cao cấp số 3
 url = http://elective.com.vn/bo-chan-ga-goi/bo-lua-4t/bo-lua-4t-cao-cap-so-3-97MSO.html
 
 [www.facebook.com]
-match = 38.5%%
-title = KORE - Chăn Ga Gối Đệm Hàn Quốc
+match = 15.4%%
+title = KORE - Chăn Ga Gối Đệm Hàn Quốc | Hanoi
 url = https://www.facebook.com/Kona.vn/
 
 [koala.vn]
