--- a/images/tham-giuong-ii-160x200/config.ini
+++ b/images/tham-giuong-ii-160x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-ii-160x200.html
 lastopen = 2024-06-17 21:09:12
 
 [search]
-lastsearch = 2024-07-20 02:45:50
+lastsearch = 2024-07-20 03:37:32
 
 [www.diepxuan.com]
 match = 27.3%%
@@ -12,9 +12,9 @@ title = Thảm giường Bode 160x200 - Điệp Xuân
 url = https://www.diepxuan.com/tham-giuong-bode-160x200.html
 
 [demxanh.com]
-match = -22.7%%
-title = Thảm trải giường cao su non màu xanh nhạt
-url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-xanh-nhat.html
+match = -4.5%%
+title = Thảm trải giường cao su non màu hồng
+url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-hong.html
 
 [www.lazada.vn]
 match = -113.6%%
