--- a/images/vo-goi-ke-mau/config.ini
+++ b/images/vo-goi-ke-mau/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-ke-mau.html
 lastopen = 2024-06-10 01:36:08
 
 [search]
-lastsearch = 2024-07-20 01:45:08
+lastsearch = 2024-07-20 03:33:49
 
 [ninhouse.vn]
 match = -146.2%%
@@ -47,9 +47,9 @@ title = UltraSheer - Siêu mỏng, vớ gối, màu da, kín ngón
 url = https://shopykhoa.com/ultrasheer-sieu-mong-vo-goi-mau-da-kin-ngon-sp101.htm
 
 [tiki.vn]
-match = -253.8%%
-title = Mua (Rẻ vô địch) Vỏ gối nằm Cotton poly Mẫu Kẻ Râu Ghi ...
-url = https://tiki.vn/re-vo-dich-vo-goi-nam-cotton-poly-mau-ke-rau-ghi-duoc-lua-mau-p118381631.html
+match = -200.0%%
+title = Vỏ gối nằm Cotton poly Mẫu Kẻ Râu Ghi (Được lựa mẫu)
+url = https://tiki.vn/vo-goi-nam-cotton-poly-mau-ke-rau-ghi-duoc-lua-mau-p125218703.html
 
 [gonbedding.vn]
 match = -15.4%%
@@ -82,9 +82,9 @@ title = Vietnamese-English dictionary - translation
 url = https://en.bab.la/dictionary/vietnamese-english/
 
 [shopee.vn]
-match = -153.8%%
-title = vỏ gối kê cổ giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=vỏ gối kê cổ&urlold=tron-bo-vo-chan-ga-goi-poly-cottong-ke-ban-co-1m2x2m-them-vo-goi-om/5956463448930783855/2642071820174507179/ 
+match = -184.6%%
+title = vỏ ruột gối ôm giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=vỏ ruột gối ôm&urlold=vo-goi-om-long-ruot-mau-mon-xanh/8494718674863723139/343220106741734172/ 
 
 [songhong.info]
 match = -161.5%%
