--- a/images/tham-ghe-1m7roi/config.ini
+++ b/images/tham-ghe-1m7roi/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ghe-1m7roi.html
 lastopen = 2024-06-07 00:15:10
 
 [search]
-lastsearch = 2024-07-19 23:46:03
+lastsearch = 2024-07-20 04:19:34
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -22,9 +22,9 @@ title = tin tức - Trẻ dưới 10 tuổi không được ngồi ghế trướ
 url = https://voz.vn/t/tre-duoi-10-tuoi-khong-duoc-ngoi-ghe-truoc-o-to.805464/page-5
 
 [www.tiktok.com]
-match = -246.7%%
-title = Cặp đôi Tiktoker Tín Nguyễn và Huỳnh Nhựt đến chung vui ...
-url = https://www.tiktok.com/@bimatvbiz/video/7242672033107135750
+match = -186.7%%
+title = Βίντεο χρήστη Khutjo Mmirwa (@khutjommirwa1) με ...
+url = https://www.tiktok.com/@khutjommirwa1/video/7239591029689617669?lang=el-GR
 
 [www.reddit.com]
 match = -120.0%%
@@ -135,4 +135,9 @@ url = https://www.youtube.com/watch?v=O9X8XUvnECc
 match = -113.3%%
 title = TAm | 💸 Money can't buy love ❤️ but it ...
 url = https://www.instagram.com/tamchaisiri/p/C7ugMT4Sk2v/
+
+[m.facebook.com]
+match = -180.0%%
+title = GeeMomo - I WANT TO GIVE 1K AIRTIME NOW TO THE ...
+url = https://m.facebook.com/permalink.php?id=237595156784846&story_fbid=711740129370344
 
