--- a/images/bo-phu-mau-160x200/config.ini
+++ b/images/bo-phu-mau-160x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-phu-mau-160x200.html
 lastopen = 2024-06-17 03:11:36
 
 [search]
-lastsearch = 2024-07-20 02:20:06
+lastsearch = 2024-07-20 04:13:14
 
 [tiki.vn]
 match = -122.2%%
@@ -32,19 +32,19 @@ title = Giường 160x200 – Chổi Xể - Nội Thất Giá Rẻ Xuất Âu
 url = https://choixe.vn/collections/giuong-160x200
 
 [nemkimtrang.com]
-match = -144.4%%
-title = Bộ Ga (Drap) Nệm Tencel Edena Mẫu 713 - CHÍNH HÃNG ...
-url = https://nemkimtrang.com/bo-ga-drap-nem-tencel-edena-mau-713-chinh-hang-cao-cap
+match = -72.2%%
+title = Bộ Ga (Drap) Nệm Tencel Edena Mẫu 743
+url = https://nemkimtrang.com/bo-ga-drap-nem-tencel-edena-mau-743-chinh-hang-cao-cap
 
 [demxanh.com]
-match = -66.7%%
-title = Bộ ga chun Cotton chống thấm màu xám đậm
-url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-xam-dam.html
+match = -72.2%%
+title = Bộ ga chun Cotton chống thấm màu ghi nhạt
+url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-ghi-nhat.html
 
 [foreverbedding.net]
-match = -61.1%%
-title = Bộ ga phủ Common C101 - Forever Bedding
-url = https://foreverbedding.net/bo-ga-phu-common-c101
+match = -66.7%%
+title = Bộ ga phủ Passion A114 - Forever Bedding
+url = https://foreverbedding.net/bo-ga-phu-passion-a114
 
 [aeoneshop.com]
 match = -105.6%%
