--- a/images/chieu-lac-d2-12/config.ini
+++ b/images/chieu-lac-d2-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-12.html
 lastopen = 2024-06-21 05:09:22
 
 [search]
-lastsearch = 2024-07-20 03:16:45
+lastsearch = 2024-07-20 04:19:14
 
 [agasound.vn]
 match = 6.7%%
@@ -102,8 +102,8 @@ title = Korea Visa Application Center in Ha Noi
 url = https://visaforkorea-vt.com/
 
 [www.slideshare.net]
-match = -186.7%%
-title = 50 đề thi học sinh giỏi vật lý 12 có đáp án chi tiết
+match = -226.7%%
+title = 50 đề thi học sinh giỏi vật lý 12 có đáp án chi tiết | PDF
 url = https://www.slideshare.net/slideshow/50-thi-hc-sinh-gii-vt-l-12-c-p-n-chi-tit/239568317
 
 [diendan.hocmai.vn]
