--- a/images/chieu-truc-thai-den14/config.ini
+++ b/images/chieu-truc-thai-den14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-thai-den14.html
 lastopen = 2024-06-09 23:36:30
 
 [search]
-lastsearch = 2024-07-20 02:46:24
+lastsearch = 2024-07-20 04:15:29
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -32,9 +32,9 @@ title = Chiếu trúc thương hiệu Việt Nam, chất lượng tốt - Bảo 
 url = https://chieutrelanlan.com/
 
 [www.youtube.com]
-match = -119.0%%
-title = Châu Chiêu Minh vs Trần Võ Dũng - ROUND 3 | GIẢI POOL 9 ...
-url = https://www.youtube.com/watch?v=eJNBnmW97Lk
+match = -138.1%%
+title = [TV] Hoàng Thái Duy VS Hồ Sở Phát - TỨ KẾT | GIẢI POOL 9 ...
+url = https://www.youtube.com/watch?v=kBdqoTRXfW8
 
 [chieutruc.info]
 match = -71.4%%
@@ -77,9 +77,9 @@ title = Toàn ngành BHXH tập trung chi trả lương hưu theo mức ...
 url = https://dangcongsan.vn/bao-hiem-xa-hoi-bao-hiem-y-te-vi-an-sinh-xa-hoi/tin-tuc/toan-nganh-bhxh-tap-trung-chi-tra-luong-huu-theo-muc-huong-moi-ngay-tu-ngay-dau-671442.html
 
 [shopee.vn]
-match = -95.2%%
-title = [ Hàng chuẩn ] Chiếu trúc Thái Lan hạt vàng 1m5 1m6 1m8 ...
-url = https://shopee.vn/-Hàng-chuẩn-Chiếu-trúc-Thái-Lan-hạt-vàng-1m5-1m6-1m8-2m2-cao-cấp-hạt-hồ-lô-không-viền-i.114438421.7333602881
+match = -42.9%%
+title = chiếu trúc hạt vàng cước đỏ thái lan đủ kích cỡ
+url = https://shopee.vn/chiếu-trúc-hạt-vàng-cước-đỏ-thái-lan-đủ-kích-cỡ-i.194586860.3058965326
 
 [baohungyen.vn]
 match = -4.8%%
