--- a/images/ga-chun-uc-16/config.ini
+++ b/images/ga-chun-uc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chun-uc-16.html
 lastopen = 2024-06-10 01:12:04
 
 [search]
-lastsearch = 2024-07-20 03:30:50
+lastsearch = 2024-07-20 04:15:40
 
 [bedding.vn]
 match = -123.1%%
@@ -12,9 +12,9 @@ title = Chăn ga gối Sông Hồng Urban mã mầu UC16
 url = https://bedding.vn/chan-ga-goi-song-hong-uc16/
 
 [changagoidemsonghong.com]
-match = -161.5%%
-title = Mẫu chăn ga gối cao cấp dòng Urban mã UC-05
-url = https://changagoidemsonghong.com/chan-ga-goi-uc05
+match = -46.2%%
+title = Chăn ga gối Home mã H16-038
+url = https://changagoidemsonghong.com/chan-ga-goi-home-h16-038
 
 [songhonghanoi.vn]
 match = -176.9%%
