--- a/images/ruot-nem-korea-9f-14-19/config.ini
+++ b/images/ruot-nem-korea-9f-14-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-14-19.html
 lastopen = 2024-06-10 00:27:45
 
 [search]
-lastsearch = 2024-07-20 01:35:19
+lastsearch = 2024-07-20 04:16:55
 
 [en.wikipedia.org]
 match = 0.0%%
@@ -159,7 +159,7 @@ url = https://www.aljazeera.com/news/2024/1/19/north-korea-touts-underwater-nucl
 [www.google.com]
 match = 0.0%%
 title = 
-url = https://www.google.com/search?sca_esv=4a42ef09a1334cc3&sca_upv=1&q=Was+Park+Chung+Hee+assassinated?&sa=X&ved=2ahUKEwjZt4Wp37OHAxWxJzQIHeEMDkEQsZYEegQIVBAC
+url = https://www.google.com/search?sca_esv=1be46b8d77827fb0&sca_upv=1&q=Was+Park+Chung+Hee+assassinated?&sa=X&ved=2ahUKEwjN95a4g7SHAxWAMVkFHV0QCTkQsZYEegQIKxAC
 
 [produccionesitaca.es]
 match = -21.4%%
@@ -375,4 +375,9 @@ url = https://www.gamekapocs.hu/
 match = -26.1%%
 title = Constitution of the Republic of Korea
 url = https://www.refworld.org/legal/legislation/natlegbod/1948/en/19949
+
+[www.hjnews.com]
+match = -100.0%%
+title = Column: Glimpses of times when there was more respect, ...
+url = https://www.hjnews.com/opinion/columns/column-glimpses-of-times-when-there-was-more-respect-everywhere/article_06efcae6-4608-11ef-a6df-eb750f6be560.html
 
