CI images update

--- a/images/tham-giuong-bo-de-18/config.ini
+++ b/images/tham-giuong-bo-de-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-bo-de-18.html
 lastopen = 2024-06-09 22:57:01
 
 [search]
-lastsearch = 2024-07-19 20:18:26
+lastsearch = 2024-07-20 04:28:00
 
 [erado.vn]
 match = 0.0%%
@@ -27,9 +27,9 @@ title = Thảm phòng ngủ NA18 - Bilystore thảm trải sàn cao cấp
 url = https://bilystore.vn/tham-phong-ngu-na18/
 
 [www.lazada.vn]
-match = -5.0%%
-title = BỘ 18 NÚT NHỰA GIƯỜNG XẾP NHÔM US
-url = https://www.lazada.vn/products/bo-18-nut-nhua-giuong-xep-nhom-us-i615932038.html
+match = -110.0%%
+title = Bộ Chăn ga gối 4 món Cotton Poly dễ thương siêu mềm ...
+url = https://www.lazada.vn/products/bo-chan-ga-goi-4-mon-cotton-poly-de-thuong-sieu-mem-min-tham-hut-tot-drap-giuong-vo-goi-ga-giuong-du-size-i2188116701.html
 
 [fhomehatinh.com]
 match = -140.0%%
@@ -142,9 +142,9 @@ title = Sofa góc giường đa năng G 18
 url = https://sofahome.vn/sofa-goc-giuong-da-nang-g-18
 
 [phedecor.com]
-match = -105.0%%
-title = Giường Charlotte Thông Minh Cao Cấp - GTM18 Chất ...
-url = https://phedecor.com/giuong-thong-minh--gtm18.html
+match = -130.0%%
+title = Giải mã 8 quy tắc phong thủy giường ngủ quan trọng giúp ...
+url = https://phedecor.com/tin-tuc/giai-ma-8-quy-tac-phong-thuy-giuong-ngu-quan-trong-giup-gia-chu-phat-tai-phat-loc.html
 
 [hoaphat.net]
 match = 5.0%%
@@ -175,4 +175,44 @@ url = https://everonhanquoc.vn/tin-tuc/6128/dem-kich-co-nao-phu-hop-cho-giuong-d
 match = 0.0%%
 title = Giường Bọc Nệm 18T - DecoViet
 url = https://decoviet.com/giuong-boc-nem-18t
+
+[jysk.vn]
+match = -135.0%%
+title = Các nguyên tắc đặt hướng giường ngủ giúp đem lại giấc ngủ ...
+url = https://jysk.vn/huong-giuong-ngu
+
+[giuongtangtringoc.com]
+match = -75.0%%
+title = 10 Mẫu Giường Tầng Hiện Đại Đáng Để Chiêm Ngưỡng
+url = https://giuongtangtringoc.com/10-mau-giuong-tang-hien-dai-dang-de-chiem-nguong.html
+
+[noithatgiakhanh.com]
+match = 23.5%%
+title = Giường Ngủ Bọc Da
+url = https://noithatgiakhanh.com/giuong-boc-da-giuong-ngu-dep/
+
+[baothanhhoa.vn]
+match = -160.0%%
+title = Tin thể thao 16/6: Bò tót “giương oai”, Italia chứng minh đẳng ...
+url = https://baothanhhoa.vn/video/tin-the-thao-16-6-bo-tot-giuong-oai-italia-chung-minh-dang-cap-huynh-nhu-nhan-duoc-de-nghi-o-lai-chau-au-216901.htm
+
+[medlatec.vn]
+match = -65.0%%
+title = Cách diệt rệp giường hiệu quả và nhanh chóng
+url = https://medlatec.vn/tin-tuc/cach-diet-rep-giuong-hieu-qua-va-nhanh-chong-s195-n32909
+
+[eva.vn]
+match = -120.0%%
+title = Lỡ lên giường” với đồng nghiệp nữ, chồng sắp cưới quỳ ...
+url = https://eva.vn/tinh-yeu-gioi-tinh/lo-len-giuong-voi-dong-nghiep-nu-chong-sap-cuoi-quy-xin-cho-1-ty-de-toi-lam-viec-nay-c3a407289.html
+
+[cucthongke.quangtri.gov.vn]
+match = -120.0%%
+title = Đẳng Cấp ee88vn | Sản phẩm và Dịch vụ-💖【For88.Com】
+url = https://cucthongke.quangtri.gov.vn/article/qGS3JxoE/
+
+[www.dienmayxanh.com]
+match = -150.0%%
+title = 7 vị trí lắp đặt điều hòa hợp lý cực hay có thể bạn chưa biết
+url = https://www.dienmayxanh.com/kinh-nghiem-hay/8-vi-tri-lap-dat-dieu-hoa-cuc-hay-cho-moi-nha-1119866
 
