--- a/images/bo-chan-ga-goi-sini-co-hop-2-18/config.ini
+++ b/images/bo-chan-ga-goi-sini-co-hop-2-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-sini-co-hop-2-18.html
 lastopen = 2024-06-09 23:47:13
 
 [search]
-lastsearch = 2024-07-20 01:34:04
+lastsearch = 2024-07-20 04:28:09
 
 [chanrathanhthuy.com]
 match = -6.5%%
@@ -22,9 +22,9 @@ title = Bộ chăn ga gối SH_UC24 102
 url = https://songhongonline.vn/products/bo-chan-ga-goi-sh-uc24-102
 
 [changagoidemsonghong.com]
-match = -6.5%%
-title = Mẫu sản phẩm chăn ga gối Sông Hồng WaltDisney YC20003
-url = https://changagoidemsonghong.com/chan-ga-goi-yc20003
+match = -29.0%%
+title = Chăn ga gối Sông Hồng dòng Home mã S17-05 - Chất Tencel ...
+url = https://changagoidemsonghong.com/chan-ga-goi-home-s17-05
 
 [foreverbedding.net]
 match = -3.2%%
